# diplom

./: CMakeLists.txt
cmake/: onetbb.cmake
modules/jacobi/tbb_Jacobi/: CMakeLists.txt
modules/seidel/mpi_Seidel/: main.cpp
modules/seidel/std_Seidel/: main.cpp
modules/seidel/tbb_Seidel/: CMakeLists.txt
modules/wave/hybrid_Wave/: CMakeLists.txt
